--- a/1_clustering.Rmd
+++ b/1_clustering.Rmd
@@ -91,7 +91,7 @@ rect.hclust(hc5, k = 3, border = 2:5)
 
 ```
 
-From this, we glean that 3 clusters seem to be adequate. Generally participants groups speakers into 3 clusters/groups:  
+From this, we glean that 3 clusters appear to be adequate. Generally participants grouped speakers into 3 clusters/groups:  
 
 - English/African: Clust 1
 
@@ -106,6 +106,7 @@ clust_data <- clust_data %>%
 
 ```
 
+### Visualize Clusters
 
 ```{r}
 fviz_cluster(list(data = clust_data, cluster = sub_grp))
