--- a/1_clustering.Rmd
+++ b/1_clustering.Rmd
@@ -8,7 +8,7 @@ editor_options:
 
 ## Introduction
 
-In this task, individuals heard spoken speech tokens and freely classified them into groups. Using hierarchical clustering we aim to see what clusters or groups appear as a result of the free classification task. 
+In this task, individuals heard spoken speech tokens and freely classified them into groups. Using hierarchical clustering we aimed to see what clusters or groups appear as a result of the free classification task. 
 
 ```{r}
 library(here)
@@ -23,7 +23,7 @@ library(dendextend) # for comparing two dendrograms
 
 1. Rows are observations (individuals) and columns are variables
 2. Any missing value in the data must be removed or estimated.
-3. The data must be standardized (i.e., scaled) to make variables comparable (I am not doing this here)
+3. The data must be standardized (i.e., scaled) to make variables comparable (I am not doing this here). 
 
 ### Read in the data
 
