--- a/1_clustering.Rmd
+++ b/1_clustering.Rmd
@@ -8,9 +8,8 @@ editor_options:
 
 ## Introduction
 
-In this task, individuals heard spoken speech tokens and freely classified them into groups. Using hierarchical clustering we aimed to see what clusters or groups appear as a result of the free classification task. 
+In this task, individuals heard spoken speech tokens and freely classified them into groups. We used hierarchical clustering to examine what natural clusters or groups as the result of free classifcation. 
 
-45 speech samples were selected from The Speech Accent Archive. The talkers included three American English regional dialects, three international English dialects, and nine nonnative accents. The nonnative accents were split into three accents from East Asia, three accents from South Asia, and three accents from Southeast Asia. The American English dialects included the New England dialect, the Southern dialect, and the Midland dialect. The international English dialects included British English, Australian English, and Africaans. The native languages of the nonnative-accented talkers were Mandarin, Korean, and Japanese from East Asia, Bengali, Gujarati, and Urdu from South Asia, and Indonesian, Tagalog, and Thai from Southeast Asia. 
 ```{r}
 # For reproducibility
 set.seed(666)
@@ -24,6 +23,7 @@ library(tidyverse)  # data manipulation
 library(cluster)    # clustering algorithms
 library(factoextra) # clustering visualization
 library(dendextend) # for comparing two dendrograms
+library(fpc)
 
 ```
 
