--- a/index.Rmd
+++ b/index.Rmd
@@ -39,7 +39,9 @@ csl: utils/apa.csl
 
 ## Data
 
-We have data in wide format. Each row is a talker type and each col is a participant. 
+8Eighty-four participants (1 participant was not used due some weird coding) took part in the free speech classification task. The speech samples were selected from The Speech Accent Archive. The talkers included three American English regional dialects, three international English dialects, and nine nonnative accents. The nonnative accents were split into three accents from East Asia, three accents from South Asia, and three accents from Southeast Asia. The American English dialects included the New England dialect, the Southern dialect, and the Midland dialect. The international English dialects included British English, Australian English, and Africaans. The native languages of the nonnative-accented talkers were Mandarin, Korean, and Japanese from East Asia, Bengali, Gujarati, and Urdu from South Asia, and Indonesian, Tagalog, and Thai from Southeast Asia. We have data in wide format. Each row is a talker type and each col is a participant. 
+
+
 
 ```{r child=if(fast == FALSE) '1_clustering.Rmd'}
 ```
