--- a/index.Rmd
+++ b/index.Rmd
@@ -43,7 +43,8 @@ Eighty-four participants (one participant was not used due to some weird coding 
 
 
 
-```{r child=if(fast == FALSE) '1_clustering.Rmd'}
+```{r '1_clustering.Rmd'}
+
 ```
 
 # Full Code
